Bug: header now sticks to top of screen
Removing overflow-x/y hasn't caused horizontal scrolling to resurface so fix is potentially fine.

Does cause the header and hero to not look good at 768px to 900px but should be fixable.

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -8,8 +8,6 @@
 // #region Root level styles
 html, body {
   max-width: 100%;
-  overflow-x: hidden !important;
-  overflow-y: auto;
 }
 
 html {
